Fix movie cast props. Align message error

--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -106,6 +106,11 @@
 
             li {
                 margin-bottom: 5px;
+
+                .movie-actor {
+                    font-size: 1.1rem;
+                    font-weight: 600;
+                }
             }
             
         }
